# dots

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  ansible.cfg  deploy.sh  first_provision.sh  inventory.yml  main.yml  play.yml  pyproject.toml  requirements.yml
ansible_collections/bitfoo/home/: galaxy.yml
ansible_collections/bitfoo/home/roles/applications/: README.md
ansible_collections/bitfoo/home/roles/applications/defaults/: main.yml
ansible_collections/bitfoo/home/roles/applications/meta/: main.yml
ansible_collections/bitfoo/home/roles/applications/tasks/: main.yml
ansible_collections/bitfoo/home/roles/argocd/: README.md
ansible_collections/bitfoo/home/roles/argocd/defaults/: main.yml
ansible_collections/bitfoo/home/roles/argocd/meta/: main.yml
ansible_collections/bitfoo/home/roles/argocd/tasks/: main.yml
ansible_collections/bitfoo/home/roles/argocd/vars/: main.yml
ansible_collections/bitfoo/home/roles/aws_cli/defaults/: main.yml
ansible_collections/bitfoo/home/roles/aws_cli/files/: aws_cli.sh  config  credentials
ansible_collections/bitfoo/home/roles/aws_cli/meta/: main.yml
ansible_collections/bitfoo/home/roles/aws_cli/tasks/: main.yml
ansible_collections/bitfoo/home/roles/bat/: README.md
ansible_collections/bitfoo/home/roles/netrc/: README.md
ansible_collections/bitfoo/home/roles/podman/: main.yml
collections/bitfoo/home/: README.md  galaxy.yml
collections/bitfoo/home/meta/: runtime.yml
group_vars/: all.yml
host_vars/: game.yml  macdb.yml  nerd.yml  pandb.yml
plays/: game.yml  macdb.yml  nerd.yml
(+368 files in other folders)
