[project]
name = "dots"
version = "0.1.0"
description = "Dotfiles Configuration and Dependency Management"
authors = [
    { name = "Daniel von Eßen", email = "daniel@bitfoo.xyz" }
]
dependencies = [
    "ansible>=9.6.0",
    "ansible-lint>=24.5.0",
    "ansible-creator>=24.5.0",
    "ansible-dev-environment>=24.4.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
[tool.rye.scripts]
  changelog="git-cliff -o CHANGELOG.md"
  run-play="ansible-playbook --become-password-file ./secrets/become_password_file --vault-password-file ./secrets/vault_password_file --diff main.yml"
  check-play="ansible-playbook --become-password-file ./secrets/become_password_file --vault-password-file ./secrets/vault_password_file --check --diff main.yml"
