[project]
name = "dots"
version = "0.1.0"
description = "Dotfiles Configuration and Dependency Management"
authors = [
    { name = "Daniel von Eßen", email = "daniel@bitfoo.xyz" }
]
dependencies = [
    "ansible>=9.6.0",
    "ansible-lint>=24.5.0",
    "ansible-creator>=24.5.0",
    "ansible-dev-environment>=24.4.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.uv]
dev-dependencies = []
environments = ["platform_system != 'Windows'"]
package = false
